# subsearch

./: .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  LICENSE  MANIFEST.in  README.md  SECURITY.md  THIRD-PARTY-LICENSES.md  TODO.md  main.py  main.pyw  make_archive.py  pyproject.toml  regkey.py  regkey.reg  report.txt  requirements.txt  setup.cfg  setup.py  subsearch.spec  todo.md  tox.ini
.github/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  PULL_REQUEST_TEMPLATE.md  SECURITY.md  auto_label.yml  changelog_builder.yml  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/actions/configure-signing/: action.yml
.github/actions/install-build-deps/: action.yml
.github/actions/install-commitizen/: action.yml
.github/actions/install-test-deps/: action.yml
.github/actions/setup-python/: action.yml
.github/config/: changelog_builder.json  configuration.json
.github/configs/: auto_assign.yml  auto_label.yml  changelog_builder.json  labeler.yml  latest_release.yml  version_control.json
.github/workflows/: _get__version__.py  _make_archive.py  _set__version__.py  black.yml  build.spec  build.yml  ci.yml  codeql-analysis.yml  codeql.yml  create-pr.yml  dependabot-auto-merge.yml  dependency-review.yml  dry-run-release.yml  labler.yml  lint.yml  make_archive.py  pr.yml  prepare-release.yml  provider-diagnostics.yml  provider-healthcheck.yml  publish.yml  pull-request.yml  pull_request.yml  push_tags.yml  pypi.yml  release.yml  schedule.yml  stale.yml  sync_branches.yml  tests.yml  update-license-year.yml  update-release-pr.yml  update_dev.yml  validate-release.yml  versioning.yml  virus_total.yml  virustotal.yml
.github/workflows/automation/: operations.py  workflows.py
.github/workflows/scripts/: actions.py  config.py  jobs.py
SubSearch/: main.py  settings.py
SubSearch/data/: _version.py
SubSearch/src/: compare.py  current_user.py  data.py  edit_config.py  file_manager.py  local_paths.py  log.py  registry.py  settings.py  settings_menu.py  settings_menu_terminal.py  sos.py  subsearch.py  updates.py
SubSearch/src/data/: _version.py  config.json  regkey.reg  version.json
SubSearch/src/gui/: download_window.py  functions.py  root.py  settings_menu.py  tkinter_data.py  tools.py  tooltip.py  widget_download.py  widget_root.py  widget_settings.py
SubSearch/src/scraper/: opensubtitles.py  opensubtitles_soup.py  subscene.py  subscene_soup.py
SubSearch/src/util/: current_user.py  file_manager.py  local_paths.py  log.py  raw_config.py  raw_registry.py  updates.py  version.py
SubSearch/src/utilities/: compare.py  current_user.py  custom_errors.py  edit_config.py  edit_registry.py  fetch_config.py  fetch_data.py  fetch_parameters.py  file_manager.py  local_paths.py  log.py  raw_config.py  raw_registry.py  read_config.py  read_config_json.py  read_parameters.py  updates.py  version.py
Subscene search/: main.py
Subscene_search/: main.py  regkey.py  sadsadasd.py
Subsearch/src/gui/: settings_menu.py
docs/: dev_requirements.txt  optional_requirement.txt  optional_requirements.txt  requirements.txt
scripts/: _make_archive.py  build.spec  bump_version.py  get__version__.py  git_branch_creator.py  make_archive.py  set__version__.py  update_version.py
scripts/commit_prompt/: diff_to_clip.py
src/subsearch/: __init__.py  __main__.py  __subsearch__.py  _logging.py  asdf_asdf.py  bootstrap.py  core.py  diagnostics.py  dummy_test.py  main.py  metaclasses.py  model.py  pipeline.py  run_conditions.py  subsearch.py  threading_utils.py  version.py
src/subsearch/config/: languages.py
src/subsearch/core/: bootstrap.py  flows.py  parallel_tasks.py  pipeline.py  run_conditions.py
src/subsearch/data/: __init__.py  __paths__.py  __set_data__.py  __set_paths__.py  __set_video__.py  __version__.py  __video__.py  application_config.json  config.json  constants.py  data_classes.py  data_fields.py  data_initializer.py  data_objects.py  guid.py  language_data.toml  languages.json  metadata_classes.py  set_data.py  set_paths.py  subtitle_languages.json  subtitle_languages.toml  version.json  version.py  video_data.py
src/subsearch/decorators/: conditional_execution.py  gui.py  mutex.py  orchestration.py  (+1 more)
subscene-search/: config.json  configure.py  main.py  settings.py
subscene-search/config/: languages.txt  user_config.txt
subscene-search/data/: config.json
subscene-search/src/: cmd_regkey.py  compare.py  config.py  current_user.py  data.py  edit_config.py  file_manager.py  log.py  os.py  registry.py  regkey.py  sos.py  subscrape.py  user_config.py
tests/: __init__.py  conftest.py  constants_test.py  fixture_data.py  globals_test.py  test_app_updater.py  test_bootstrap.py  test_bootstrap_gui_may_open.py  test_bootstrap_paths.py  test_bootstrap_settings_mode.py  test_config_hybrid.py  test_config_integrity.py  test_config_keys.py  test_config_ownership.py  test_config_session.py  test_console_parity.py  test_core.py  test_crash_log.py  test_current_user.py  test_data_set_data_.py  test_data_set_video.py  test_data_verison.py  test_download_history.py  test_factories.py  test_file_manager.py  test_file_system.py  test_flows.py  test_gestdown_episode_lookup.py  test_gestdown_provider.py  test_http.py  test_imdb_episode_lookup.py  test_import_subsearch_is_lazy.py  test_io_app.py  test_io_file_system.py  test_json_file.py  test_local_paths.py  test_log_events.py  test_log_sanitizer.py  test_logger_console_levels.py  test_nested_dict.py  (+50 more)
tests/resources/: fake_config.json
tests/test_files/: test.movie.2022.1080p-group.mkv
tests/tmp_text/: tmp.txt
tools/: boot_timer.py  build.py  build_local.py  bundle_icons.py  capture_ui_grid.py  changelog_template.md.j2  cx_freeze_build.py  cz_subsearch.py  monkey_patching.py  preview_download_manager.py  setup_logic.py  setuptools_cxfreeze.py
tools/cli/: commands.py  globals.py
tools/cli_github_actions/: commands.py
tools/export_ico/: export_ico.ps1
tools/github_actions/: constants.py  globals.py  install_module.py
tools/spritesheet_generator/: package.json  spritesheet_generator.js
(+371 files in other folders)
