[build-system]
    build-backend = "setuptools.build_meta"
    requires = ["setuptools>=65.5", "wheel"]

[project]
    authors = [
        {email = "vagabondHustler.github@gmail.com"},
        {name = "vagabondHustler"},
    ]
    classifiers = [
        "Intended Audience :: Developers",
        "Intended Audience :: End Users/Desktop",
        "Operating System :: Microsoft :: Windows",
        "Programming Language :: Python :: 3.12",
        "Topic :: Multimedia :: Video",
        "Topic :: Utilities",
    ]
    dependencies = [
        "cloudscraper==1.2.71",
        "num2words==0.5.14",
        "packaging==24.2",
        "pillow==11.1.0",
        "pystray==0.19.5",
        "requests==2.32.4",
        "selectolax==0.3.28",
        "toml==0.10.2",
    ]
    description = "Subsearch"
    dynamic = ["version"]
    keywords = [
        "subtitles",
        "sub",
        "srt",
        "tool",
        "tools",
        "download",
        "movies",
        "shows",
        "scrape",
        "opensubtitles",
        "subscene",
        "subsearch",
        "yifysubtitles",
    ]
    license = {text = "MIT license"}
    name = "Subsearch"
    readme = "README.md"
    requires-python = ">=3.12"

[project.urls]
    repository = "https://github.com/vagabondHustler/subsearch"

[project.scripts]
    subsearch = "subsearch:main"

[tool.setuptools]
    platforms = ["win32"]
    zip-safe = false

[tool.setuptools.packages.find]
    exclude = ["examples*", "subsearch.test*", "tools*"]
    include = ["subsearch*"]
    where = ["src"]

[tool.setuptools.dynamic]
    version = {attr = "subsearch.data.__version__"}

[project.optional-dependencies]
    build = [
        "build==1.2.2.post1",
        "cx_Freeze==8.1.0",
        "twine==6.1.0",
        "psutil==7.0.0",
    ]
    lint = ["black==25.1.0", "isort==6.0.1"]
    tests = [
        "pytest-cov==6.1.1",
        "pytest==8.3.5",
        "tox==4.25.0",
        "python-dotenv==1.1.0",
    ]
    tools = ["pyperclip==1.9.0"]
    type = ["mypy==1.18.2"]


[tool.pytest.ini_options]
    addopts = "--cov=src/subsearch"
    filterwarnings = ['ignore::DeprecationWarning']
    log_cli = true
    log_cli_level = 'DEBUG'
    testpaths = ["tests"]

[tool.black]
    line-length = 120

[tool.isort]
    profile = "black"

[tool.mypy]
    check_untyped_defs = true
    ignore_missing_imports = true
    mypy_path = "src"
    warn_no_return = false