[build-system]
    build-backend = "setuptools.build_meta"
    requires = ["setuptools>=65.5", "wheel"]

[project]
    authors = [
        {email = "vagabondHustler.github@gmail.com"},
        {name = "vagabondHustler"},
    ]
    classifiers = [
        "Intended Audience :: Developers",
        "Intended Audience :: End Users/Desktop",
        "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
        "Operating System :: Microsoft :: Windows",
        "Programming Language :: Python :: 3.14",
        "Topic :: Multimedia :: Video",
        "Topic :: Utilities",
    ]
    dependencies = [
        "cloudscraper==1.2.71",
        "imdbinfo==0.9.1",
        "num2words==0.5.14",
        "packaging==26.2",
        "PySide6==6.11.1",
        "PySide6-Fluent-Widgets==1.11.2",
        "requests==2.34.2",
        "selectolax==0.4.10",
        "toml==0.10.2",
    ]
    description = "Subsearch"
    dynamic = ["version"]
    keywords = [
        "subtitles",
        "sub",
        "srt",
        "tool",
        "tools",
        "download",
        "movies",
        "shows",
        "scrape",
        "opensubtitles",
        "subscene",
        "subsearch",
        "yifysubtitles",
    ]
    license = {text = "GPL-3.0-or-later"}
    name = "Subsearch"
    readme = "README.md"
    requires-python = ">=3.14"

[project.urls]
    repository = "https://github.com/vagabondHustler/subsearch"

[project.scripts]
    subsearch = "subsearch:main"

[tool.setuptools]
    platforms = ["win32"]
    zip-safe = false

[tool.setuptools.packages.find]
    exclude = ["examples*", "subsearch.test*", "tools*"]
    include = ["subsearch*"]
    where = ["src"]

[tool.setuptools.dynamic]
    version = {attr = "subsearch.data.__version__"}

[project.optional-dependencies]
    build = [
        "build==1.5.0",
        "cx_Freeze==8.6.4",
        "twine==6.2.0",
        "psutil==7.2.2",
    ]
    lint = ["black==26.5.1", "isort==8.0.1"]
    tests = [
        "pytest-cov==7.1.0",
        "pytest==9.0.3",
        "tox==4.55.0",
        "python-dotenv==1.2.2",
    ]
    tools = ["pyperclip==1.11.0", "commitizen==4.16.3", "pre-commit==4.6.0"]
    type = ["mypy==2.1.0"]


[tool.pytest.ini_options]
    addopts = "--cov=src/subsearch"
    filterwarnings = ['ignore::DeprecationWarning']
    log_cli = true
    log_cli_level = 'DEBUG'
    testpaths = ["tests"]

[project.entry-points."commitizen.plugin"]
    SubsearchCz = "tools.cz_subsearch:SubsearchCz"

[tool.commitizen]
    name = "SubsearchCz"
    template = "changelog_template.md.j2"
    version = "2.47.7"
    tag_format = "$version"
    update_changelog_on_bump = false
    annotated_tag = true
    version_files = [
        "src/subsearch/data/version.py:__version__",
    ]

[tool.black]
    line-length = 120

[tool.isort]
    profile = "black"

[tool.mypy]
    check_untyped_defs = true
    ignore_missing_imports = true
    mypy_path = "src"
    warn_no_return = false