[build-system]
    build-backend = "setuptools.build_meta"
    requires = ["setuptools>=82.0"]

[project]
    authors = [
        {email = "vagabondHustler.github@gmail.com"},
        {name = "vagabondHustler"},
    ]
    classifiers = [
        "Intended Audience :: Developers",
        "Intended Audience :: End Users/Desktop",
        "Operating System :: Microsoft :: Windows",
        "Programming Language :: Python :: 3.14",
        "Topic :: Multimedia :: Video",
        "Topic :: Utilities",
    ]
    dependencies = [
        "curl_cffi==0.15.0",
        "imdbinfo==0.9.1",
        "num2words==0.5.14",
        "packaging==26.2",
        "PySide6==6.11.1",
        "PySide6-Fluent-Widgets==1.11.2",
        "rich==15.0.0",
        "selectolax==0.4.10",
    ]
    description = "Subsearch"
    dynamic = ["version"]
    keywords = [
        "subtitles",
        "sub",
        "srt",
        "tool",
        "tools",
        "download",
        "movies",
        "shows",
        "scrape",
        "opensubtitles",
        "subsearch",
        "subsource",
        "yifysubtitles",
        "tvsubtitles",
        "gestdown",
    ]
    license = "GPL-3.0-or-later"
    license-files = ["LICENSE", "THIRD-PARTY-LICENSES.md"]
    name = "Subsearch"
    readme = "README.md"
    requires-python = ">=3.14"

[project.urls]
    repository = "https://github.com/vagabondHustler/subsearch"

[project.scripts]
    subsearch = "subsearch:main"

[tool.setuptools]
    platforms = ["win32"]
    zip-safe = false

[tool.setuptools.packages.find]
    exclude = ["examples*", "subsearch.test*", "tools*"]
    include = ["subsearch*"]
    where = ["src"]

[tool.setuptools.dynamic]
    version = {attr = "subsearch.runtime.config.version.__version__"}

[project.optional-dependencies]
    all = ["Subsearch[build,lint,tests,tools,type]"]
    build = [
        "build==1.5.0",
        "cx_Freeze==8.6.4",
        "twine==6.2.0",
        "psutil==7.2.2",
    ]
    lint = ["black==26.5.1", "isort==8.0.1"]
    tests = [
        "pytest-cov==7.1.0",
        "pytest==9.1.0",
        "pytest-qt==4.5.0",
        "tox==4.56.1",
        "python-dotenv==1.2.2",
    ]
    tools = ["commitizen==4.16.4", "pre-commit==4.6.0", "pillow==12.2.0"]
    type = ["mypy==2.1.0"]


[tool.pytest.ini_options]
    addopts = "--cov=src/subsearch"
    filterwarnings = ['ignore::DeprecationWarning']
    log_cli = true
    log_cli_level = 'DEBUG'
    testpaths = ["tests"]

[project.entry-points."commitizen.plugin"]
    SubsearchCz = "tools.cz_subsearch:SubsearchCz"

[tool.commitizen]
    name = "SubsearchCz"
    template = "changelog_template.md.j2"
    version = "3.1.0"
    tag_format = "$version"
    ignored_tag_pattern = ".*[^0-9.].*"
    update_changelog_on_bump = false
    annotated_tag = true
    version_files = [
        "src/subsearch/runtime/config/version.py:__version__",
    ]

[tool.black]
    line-length = 120

[tool.isort]
    profile = "black"

[tool.mypy]
    check_untyped_defs = true
    ignore_missing_imports = false
    mypy_path = "src"
    warn_no_return = true
    warn_return_any = true
    exclude_gitignore = true
    disallow_untyped_defs = true

[[tool.mypy.overrides]]
    module = [
        "imdbinfo.*",
        "num2words.*",
        "qfluentwidgets.*",
        "setuptools.*",
    ]
    ignore_missing_imports = true