[metadata]
name = subsearch
version = attr: subsearch.data.__version__
description = Download subtitles for movies and shows, automatically with one easy mouse click.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/vagabondHustler/subsearch
author = vagabondHustler
license = MIT
license_file = LICENSE
platforms = win32
classifiers =
    Programming Language :: Python :: 3.10

[options]
package_dir =
    =src
packages = find_namespace:
include_package_data = True
install_requires =
    setuptools
    beautifulsoup4
    cloudscraper
    num2words
    requests
    lxml
    sv-ttk
python_requires = >=3.10
zip_safe = no

[options.packages.find]
exclude =
    examples*
    tools*
    docs*
    subsearch.tests*
    subsearch.test*
    subsearch.*.log
where = src

[options.extras_require]
testing =
    pytest>=7.1
    pytest-cov>=3.0
    tox>=3.25