[metadata]
name = subsearch
version = attr: subsearch.data.__version__
description = Download subtitles for movies and shows, automatically with one easy mouse click.
long_description = file: README.md
long_description_content_type = text/markdown
keywords = subsearch, subscene, opensubtitles, download, subtitles, movies, shows, automatically, scrape
url = https://github.com/vagabondHustler/subsearch
author = vagabondHustler
license = MIT
license_files = LICENSE
platforms = win32
classifiers =
    Programming Language :: Python :: 3.10
    Operating System :: Microsoft :: Windows
    Topic :: Multimedia :: Video
    Topic :: Utilities
    Intended Audience :: Developers
    Intended Audience :: End Users/Desktop

[options]
package_dir =
    =src
packages = find_namespace:
include_package_data = True
install_requires =
    setuptools>=63.2
    beautifulsoup4>=4.11
    cloudscraper>=1.2
    num2words>=0.5
    requests>=2.28
    lxml>=4.9
    packaging>=21.3
    cinemagoer>=2022.2.11
python_requires = >=3.10
zip_safe = no

[options.packages.find]
exclude =
    examples*
    tools*
    docs*
    subsearch.tests*
    subsearch.test*
    subsearch.*.log
where = src

[options.entry_points]
console_scripts =
    subsearch = subsearch:main

[options.extras_require]
testing =
    pytest>=7.1
    pytest-cov>=3.0
    tox>=3.25